# marlowe

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
marlowe/: mcp_server.py
marlowe/analysis/: detector.py  judge.py  scorer.py
marlowe/analysis/heuristics/: behavior_shift.py  refusal_bypass.py
marlowe/attacks/: base.py
marlowe/attacks/plugins/: direct_override.py  many_shot.py  obfuscation.py
marlowe/cli/: app.py  output.py
marlowe/cli/commands/: scan.py
marlowe/cli/runners/: scan_runner.py
marlowe/core/: config.py  constants.py  exceptions.py  models.py  registry.py
marlowe/engine/: baseline.py  campaign.py  runner.py
marlowe/reporting/formats/: json_reporter.py  markdown_reporter.py
marlowe/targets/: base.py  factory.py  ollama_adapter.py
prompt_system/: coding_assistant.md  customer_support.md  finance_advisor.md  medical_triage.txt
tests/: conftest.py
tests/integration/: test_campaign_flow.py
tests/unit/test_analysis/: test_scorer.py
tests/unit/test_plugins/: test_direct_override.py  test_system_prompt_file.py
