[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marlowe"
version = "0.1.0"
description = "Automated LLM red-teaming agent for prompt injection testing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "security", "red-teaming", "prompt-injection", "adversarial"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "motor>=3.4.0",
    "beanie>=1.26.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.28.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
marlowe = "marlowe.cli.app:app"

[project.entry-points."marlowe.attacks"]
direct_override    = "marlowe.attacks.plugins.direct_override:DirectOverridePlugin"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
